Small change in formatting

--- a/www/student-search.html
+++ b/www/student-search.html
@@ -28,7 +28,7 @@
 
   <body>
      <a style= "margin-top:10px;margin-left:10px;" class="pure-button pure-button-primary" href="/index.html">Banner Main</a></div>
-	 <p>
+	 <p style="width:50%; margin-left:25%;">
       Enter at most three classes that the student takes. To narrow search results, choose courses that
       vary or that do not contain very many students. In the first box, enter the course subject
       code (e.g. CS, IT, MATH). In the next box, enter the course number (e.g. 374, 211, 377).
